v3/crates/engine/tests/snapshots/execution__common__ir_execute__models__select_many__limit_offset__offset.snap
---
source: crates/engine/tests/common.rs
expression: ir
---
V1(
    QueryRequestV1 {
        queries: {
            Alias(
                Identifier(
                    "AuthorMany",
                ),
            ): Model(
                ModelSelection {
                    target: ModelTarget {
                        subgraph: SubgraphName(
                            "default",
                        ),
                        model_name: ModelName(
                            Identifier(
                                "Authors",
                            ),
                        ),
                        arguments: {},
                        filter: None,
                        order_by: [],
                        limit: None,
                        offset: Some(
                            2,
                        ),
                    },
                    selection: {
                        Alias(
                            Identifier(
                                "author_id",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "author_id",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                        Alias(
                            Identifier(
                                "first_name",
                            ),
                        ): Field(
                            ObjectFieldSelection {
                                target: ObjectFieldTarget {
                                    field_name: FieldName(
                                        Identifier(
                                            "first_name",
                                        ),
                                    ),
                                    arguments: {},
                                },
                                selection: None,
                            },
                        ),
                    },
                },
            ),
        },
    },
)
